@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-15T16:33:39Z",
-  "count_outdated" : 120,
-  "uniques_outdated" : 41,
-  "count" : 157,
-  "uniques" : 64,
+  "timestamp" : "2022-05-16T01:53:43Z",
+  "count_outdated" : 122,
+  "uniques_outdated" : 43,
+  "count" : 158,
+  "uniques" : 65,
   "clones" : [
-    {
-      "timestamp": "2022-05-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-02T00:00:00Z",
       "count": 2,
